# TIC

./: Cargo.toml  README.md
src/: app.rs  lib.rs  main.rs
src/completions/: chat.rs  mod.rs
src/completions/templates/: phi3.jinja
src/components/: message.rs
