[package]
name = "tic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.6", features = ["sqlite"] }
eframe = "0.27.2"
egui = "0.27.2"
llama_cpp = { version = "0.3.2", features = ["metal"] }
oasysdb = "0.4.4"
tokio = { version = "1.37.0", features = ["full"] }
