[package]
name = "tic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.6", features = ["sqlite"] }
iced = { version = "0.12.1", features = ["tokio"] }
llama_cpp = { version = "0.3.2", features = ["metal"] }
minijinja = "2.0.1"
oasysdb = "0.4.4"
